--- a/ussal-bencher/src/index.html
+++ b/ussal-bencher/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <script type="module">
-        import init from "./ussal-viewer.js";
+        import init from "./ussal_viewer_web.js";
         window.addEventListener("load", () => {
             init();
         });
