--- a/ussal-client/src/index.html
+++ b/ussal-client/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <script type="module">
-        import init from "./ussal_viewer_web.js";
+        import init from "./ussal-viewer-web.js";
         window.addEventListener("load", () => {
             init();
         });
